languages/io-automaton-fe/src/test/resources/invalid/EventsMultipleTimes.ioautomaton
package invalid;

automaton EventsMultipleTimes {

    input int i;
    input int i;
    
    input int j;
    input double j;
    
    output int a;

	state Idle;	
	initial Idle;
}